# trying-bevy

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
assets/prefab/: square_character.ron  stage.ron
config/: bindings.ron  display.ron
ggrs-no-rapier/: Cargo.toml
ggrs-no-rapier/src/: fighter.rs  main.rs  physics.rs  player_movement.rs
rapier-ggrs/: LICENSE  README.md
rapier-ggrs/assets/models/sphere/: sphere.gltf
rapier-ggrs/src/: fighter.rs  startup.rs
src/: fighter.rs  main.rs  rollback.rs
src/components/: character.rs  mod.rs
src/systems/: mod.rs  movement_system.rs
