[package]
name = "my-amethyst-project"
version = "0.1.0"
authors = ["derelbenkoenig <derelbenkoenig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cft(target_os != "macos")'.dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", features = ["vulkan"] }

[target.'cfg(macos)'.dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", features = ["metal"] }
